# x402

./: CONTRIBUTING.md  README.md
.github/workflows/: e2e_tests.yml  publish_npm_x402.yml  publish_npm_x402_axios.yml  publish_npm_x402_express.yml  publish_npm_x402_fetch.yml  publish_npm_x402_hono.yml  publish_npm_x402_next.yml  publish_pypi_x402.yml
docs/: AGENTS.md  docs.json  faq.md  introduction.md  sdk-features.md
docs/advanced-concepts/: lifecycle-hooks.mdx  wallet-compatibility.mdx
docs/core-concepts/: client-server.md  facilitator.md  network-and-token-support.mdx
docs/dev-tools/: facilitators.md  overview.md  third-party-extensions.md  third-party-sdks.md
docs/extensions/: bazaar.mdx  builder-code.mdx  eip2612-gas-sponsoring.mdx  erc20-approval-gas-sponsoring.mdx  offer-receipt.mdx  overview.mdx  payment-identifier.mdx  sign-in-with-x.mdx
docs/getting-started/: quickstart-for-buyers.mdx  quickstart-for-sellers.mdx
docs/guides/: mcp-server-with-x402.md  migration-v1-to-v2.mdx
docs/schemes/: batch-settlement.mdx
e2e/: pnpm-lock.yaml  pnpm-workspace.yaml  test.ts
e2e/clients/axios/: index.ts  package.json  test.config.json
e2e/clients/fetch/: index.ts  test.config.json
e2e/clients/go-http/: README.md  go.mod  main.go  test.config.json
e2e/clients/httpx/: main.py  pyproject.toml  test.config.json
e2e/clients/mcp-go/: go.mod  main.go  test.config.json
e2e/clients/mcp-python/: pyproject.toml  test.config.json
e2e/clients/mcp-typescript/: index.ts  package.json  test.config.json
e2e/clients/requests/: main.py  pyproject.toml  test.config.json
e2e/clients/svm-smart-wallet/: index.ts  test.config.json
e2e/extensions/: bazaar.ts
e2e/facilitators/go/: README.md  batched_authorizer.go  bazaar.go  go.mod  main.go  test.config.json
e2e/facilitators/python/: bazaar.py  main.py  pyproject.toml  test.config.json
e2e/facilitators/typescript/: bazaar.ts  index.ts  test.config.json
e2e/scripts/: ci-select-families.sh  permit2-approval.ts  swig-setup.ts
e2e/servers/echo/: README.md  go.mod  main.go
e2e/servers/express/: index.ts
e2e/servers/fastapi/: main.py  pyproject.toml  test.config.json
e2e/servers/fastify/: index.ts  test.config.json
e2e/servers/flask/: main.py  pyproject.toml  test.config.json
e2e/servers/gin/: README.md  batched_authorizer.go  go.mod  main.go  test.config.json
e2e/servers/hono/: index.ts
e2e/servers/mcp-python/: main.py  (+2 more)
e2e/src/: concurrency.ts  discovery.ts  ports.ts  types.ts
examples/python/clients/batch-settlement/: README.md  main.py  pyproject.toml
examples/python/clients/mcp-chatbot/: pyproject.toml
examples/python/clients/payment-identifier/: pyproject.toml
examples/python/facilitator/batch-settlement/: README.md  main.py  pyproject.toml
examples/python/servers/batch-settlement/: README.md  main.py  pyproject.toml
examples/python/servers/mcp/: pyproject.toml
examples/python/servers/payment-identifier/: pyproject.toml
examples/typescript/: pnpm-lock.yaml  pnpm-workspace.yaml
go/: CHANGELOG.md  CLIENT.md  CONTRIBUTING.md  FACILITATOR.md  Makefile  README.md  SERVER.md  client.go  client_test.go  constants.go  facilitator.go  facilitator_hooks_test.go  facilitator_test.go  go.mod  interfaces.go  server.go  server_hooks.go  server_hooks_test.go  server_test.go  types.go
go/.changes/: v2.12.0.md  v2.5.0.md  v2.6.0.md  v2.7.0.md  v2.8.0.md
go/.changeset/: facilitator-response-errors.md  go-erc20-approval-gas-sponsoring.md
go/extensions/: README.md
go/http/: client.go  client_test.go  dynamic_test.go  evm_paywall_template.go  facilitator_client.go  facilitator_client_test.go  http.go  paywall.go  paywall_test.go  server.go  server_extensions_test.go  server_test.go  svm_paywall_template.go
go/legacy/: README.md  go.mod
go/mcp/: CHANGELOG.md  README.md  client.go  client_test.go  client_v1_test.go  doc.go  utils.go  utils_test.go
go/signers/: README.md
java/: README.md  pom.xml  spotbugs-exclude.xml
python/legacy/: README.md  pyproject.toml
python/x402/: CHANGELOG.md  README.md  __init__.py  client.py  client_base.py  hook_adapters.py  hook_policy.py  interfaces.py  pyproject.toml  server.py  server_base.py
specs/: x402-specification-v2.md
specs/extensions/: bazaar.md  http-message-signatures.md
typescript/: README.md  pnpm-lock.yaml
typescript/.changeset/: add-maxvalue-ceiling-x402-axios.md  add-mezo-mainnet-default-stablecoin.md  erc6492-factory-allowlist.md  evm-reject-eoa-asset-address.md  fix-scientific-notation-usd-conversion.md  migrate-to-x402-foundation.md  quiet-cycles-serve.md  silver-mails-prove.md  siwx-dynamic-info-fields.md  tender-doors-drop.md  validate-bazaar-startup.md
typescript/site/: README.md  package.json  postcss.config.mjs  proxy.ts
(+489 files in other folders)
