[project]
name = "x402-batch-settlement-client-example"
version = "0.1.0"
description = "Example httpx client using the x402 batch-settlement EVM scheme"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "x402[httpx,evm]",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.hatch.metadata]
allow-direct-references = true

[tool.uv]
package = false

[tool.uv.sources]
x402 = { path = "../../../../python/x402", editable = true }
