[project]
name = "x402-payment-identifier-client-example"
version = "0.1.0"
description = "Example of using x402 payment-identifier extension for idempotent payments"
requires-python = ">=3.10"
dependencies = [
    "python-dotenv>=1.0.0",
    "x402[httpx,evm,extensions]",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.hatch.metadata]
allow-direct-references = true

[tool.uv]
required-version = ">=0.11.0"
exclude-newer = "3 days"
package = false

[tool.uv.sources]
x402 = { path = "../../../../python/x402", editable = true }
