[project]
name = "x402-batch-settlement-facilitator-example"
version = "0.1.0"
description = "Example FastAPI facilitator for the x402 batch-settlement EVM scheme"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "x402[evm]",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.40.0",
    "python-dotenv>=1.0.0",
]

[tool.uv]
package = false

[tool.uv.sources]
x402 = { path = "../../../../python/x402", editable = true }
