[project]
name = "x402-payment-identifier-server-example"
version = "0.1.0"
description = "Example of using x402 payment-identifier extension for idempotent payments"
requires-python = ">=3.10"
dependencies = [
    "python-dotenv>=1.0.0",
    "x402[fastapi,evm,extensions]",
    "uvicorn[standard]>=0.40.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.hatch.metadata]
allow-direct-references = true

[tool.uv]
package = false

[tool.uv.sources]
x402 = { path = "../../../../python/x402", editable = true }
